force-app/src/objects/c2g__ReminderDetailedContactLog__c.object
<CustomObject>
    <description>Custom object used to store all the reminder detailed contact logs.</description>
    <fields>
        <fullName>c2g__AdditionalContactAddress__c</fullName>
        <label>Additional Contact Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reminder Detailed Contact Logs</relationshipLabel>
        <relationshipName>ReminderDetailedContactLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__ReminderLog__c</fullName>
        <label>Reminder Log</label>
        <referenceTo>c2g__ReminderLog__c</referenceTo>
        <relationshipLabel>Reminder Detailed Contact Logs</relationshipLabel>
        <relationshipName>ReminderDetailedContactLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Reminder Detailed Contact Log</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__ReminderLog__c</columns>
        <columns>c2g__Contact__c</columns>
        <columns>c2g__AdditionalContactAddress__c</columns>
        <columns>c2g__Status__c</columns>
        <columns>c2g__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSRDCL-{000000000}</displayFormat>
        <label>Reminder Detailed Contact Log Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminder Detailed Contact Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>